--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.561.0"
+    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@4.0.379"
   }
 }
 </script>
